--- a/public/style.css
+++ b/public/style.css
@@ -9,15 +9,6 @@
 
 /* PALETTE */
 /* GRID */
-#flex {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  justify-content: center;
-  position: relative;
-}
-
 .section {
   width: 100%;
   display: grid;
@@ -72,7 +63,7 @@
 /*@import "test-grid.scss";*/
 /* MENU */
 header {
-  width: 70%;
+  width: 100%;
 }
 header nav {
   width: 75%;
@@ -103,12 +94,51 @@ header a:hover {
   box-shadow: inset 0 -5px 0 #FF3680;
 }
 
+#burger {
+  width: 30px;
+  display: none;
+  align-self: center;
+  cursor: pointer;
+}
+#burger .bar {
+  width: 100%;
+  height: 5px;
+  background-color: #7327c0;
+  margin: 8px 0;
+}
+
+/* MEDIA */
+@media all and (max-width: 768px) {
+  #row-one, #row-two {
+    grid-template-columns: 1fr;
+  }
+  nav {
+    display: none;
+  }
+  #burger {
+    display: block;
+  }
+}
+@keyframes bgcolor {
+  0% {
+    background-color: #9a34f9;
+  }
+  50% {
+    background-color: #FF3680;
+  }
+  100% {
+    background-color: #9a34f9;
+  }
+}
 /* GENERAL */
 body {
   width: 100%;
   min-height: 100vh;
   background-color: #9a34f9;
   font-size: 1em;
+  animation-name: bgcolor;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
 h2 {
@@ -121,6 +151,15 @@ h2 {
 .wrapper {
   width: 80%;
   margin: 0 auto;
+}
+
+#flex {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: center;
+  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
