--- a/assets/grid.scss
+++ b/assets/grid.scss
@@ -8,6 +8,8 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: $main-dark;
+    outline: 2px solid $border;
+    
     img{
         width: 100%;
         height: 250px;
