--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: #7327c0;
+  outline: 2px solid #26fec9;
 }
 .cards img {
   width: 100%;
