--- a/assets/grid.scss
+++ b/assets/grid.scss
@@ -12,7 +12,7 @@
     
     img{
         width: 100%;
-        height: 250px;
+        height: 100%;
         object-fit: cover;
         object-position: bottom ;
     }
