--- a/assets/grid.scss
+++ b/assets/grid.scss
@@ -9,16 +9,16 @@
     justify-content: space-between;
     background-color: $main-dark;
     outline: 2px solid $border;
-    
     img{
         width: 100%;
         height: 100%;
+        min-height: 0;
         object-fit: cover;
-        object-position: bottom ;
+        object-position: bottom;
     }
 }
 #row-one{
-    grid-template-columns: 2.8fr 2.8fr 2.8fr 3.6fr;
+    grid-template-columns: 1fr 1fr 1fr 1.5fr;
     .cards{
         min-height: 300px;
     }
