--- a/public/style.css
+++ b/public/style.css
@@ -25,12 +25,13 @@
 .cards img {
   width: 100%;
   height: 100%;
+  min-height: 0;
   object-fit: cover;
   object-position: bottom;
 }
 
 #row-one {
-  grid-template-columns: 2.8fr 2.8fr 2.8fr 3.6fr;
+  grid-template-columns: 1fr 1fr 1fr 1.5fr;
 }
 #row-one .cards {
   min-height: 300px;
